// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`primary and secondary renders as expected 1`] = `
<div
  className="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
>
  <div
    className="flex-child-no-shrink"
  >
    <Button
      data-test="primary-modal-action"
      onClick={[MockFunction]}
      passthroughProps={
        Object {
          "aria-label": "Okay",
        }
      }
      size="medium"
      variant="primary"
    >
      Okay
    </Button>
  </div>
  <div
    className="flex-child-no-shrink mr12"
  >
    <Button
      data-test="secondary-modal-action"
      onClick={[MockFunction]}
      passthroughProps={
        Object {
          "aria-label": "Cancel",
        }
      }
      size="medium"
      variant="secondary"
    >
      Cancel
    </Button>
  </div>
</div>
`;

exports[`primary and tertiary does not render tertiary button, since secondary is not provided 1`] = `
<div
  className="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
>
  <div
    className="flex-child-no-shrink"
  >
    <Button
      data-test="primary-modal-action"
      onClick={[MockFunction]}
      passthroughProps={
        Object {
          "aria-label": "Okay",
        }
      }
      size="medium"
      variant="primary"
    >
      Okay
    </Button>
  </div>
</div>
`;

exports[`primary only renders as expected 1`] = `
<div
  className="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
>
  <div
    className="flex-child-no-shrink"
  >
    <Button
      data-test="primary-modal-action"
      onClick={[MockFunction]}
      passthroughProps={
        Object {
          "aria-label": "Okay",
        }
      }
      size="medium"
      variant="primary"
    >
      Okay
    </Button>
  </div>
</div>
`;

exports[`primary, secondary, tertiary renders as expected 1`] = `
<div
  className="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
>
  <div
    className="flex-child-no-shrink"
  >
    <Button
      data-test="primary-modal-action"
      onClick={[MockFunction]}
      passthroughProps={
        Object {
          "aria-label": "Okay",
        }
      }
      size="medium"
      variant="primary"
    >
      Okay
    </Button>
  </div>
  <div
    className="flex-child-no-shrink mr12"
  >
    <Button
      data-test="secondary-modal-action"
      onClick={[MockFunction]}
      passthroughProps={
        Object {
          "aria-label": "Cancel",
        }
      }
      size="medium"
      variant="secondary"
    >
      Cancel
    </Button>
  </div>
  <div
    className="flex-child-grow flex-child-no-shrink mr12"
  >
    <Button
      aria-label="Give up"
      data-test="tertiary-modal-action"
      onClick={[MockFunction]}
      variant="tertiary"
    >
      Give up
    </Button>
  </div>
</div>
`;
